--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "swiggy",
   "version": "0.1.0",
@@ -18,6 +17,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.1",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
