--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "swiggy",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^5.17.0",
